<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/cardview_dark_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#00f1"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
<Button
    android:id="@+id/btnSeven"
    android:layout_margin="3dp"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:onClick="OnDigit"
    android:layout_weight="1"
    android:text="@string/_7"

    tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnEight"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_8"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnNine"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_9"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"

            tools:ignore="UsingOnClickInXml" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_4"

            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnFive"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_5"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnSix"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_6"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnMul"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"

            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_1"

            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_2"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnThree"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/_3"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnMinus"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"

            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnPoint"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDigit"
            android:layout_weight="1"
            android:text="@string/point"

            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/btnZero"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnDecimalPoint"
            android:layout_weight="1"
            android:text="@string/_0"

            tools:ignore="NestedWeights,UsingOnClickInXml" />


        <Button
            android:id="@+id/btnCLR"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onClear"
            android:layout_weight="1"
            android:text="@string/clr"

            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"

            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background=""
        >
        <Button
            android:id="@+id/Equal"
            android:layout_margin="3dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="OnEqual"
            android:layout_weight="1"
            android:text="@string/equal"

            tools:ignore="NestedWeights,UsingOnClickInXml" />


    </LinearLayout>

    </LinearLayout>